Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,12 +39,19 @@
 <hr><h3>
 <a name="how-to" class="anchor" href="#how-to"><span class="octicon octicon-link"></span></a>How-to:</h3>
 
-<p>All you will want to do with this library in your project is:</p>
+<p>All you will want to do with this library in your project is just to use project generator script:</p>
 
 <ul>
-<li>use this template to make main.cpp: <a href="https://github.com/PsichiX/Ptakopysk/blob/master/templates/TemplateMain.cpp">TemplateMain.cpp</a>
+<li><strong>cd &lt;sdk&gt;/templates/</strong></li>
+<li><strong>./make_new_project.sh -o "path/to/project/directory/" -p "ProjectName"</strong></li>
+</ul><p>Or use templates directly:</p>
+
+<ul>
+<li>
+<strong>main:</strong> <a href="https://github.com/PsichiX/Ptakopysk/blob/master/templates/TemplateMain.cpp">TemplateMain.cpp</a>
 </li>
-<li>extend your game prototype by adding components made by yourself, based on these templates: <a href="https://github.com/PsichiX/Ptakopysk/blob/master/templates/TemplateComponent.h">TemplateComponent.h</a>, <a href="https://github.com/PsichiX/Ptakopysk/blob/master/templates/TemplateComponent.cpp">TemplateComponent.cpp</a>
+<li>
+<strong>components:</strong> <a href="https://github.com/PsichiX/Ptakopysk/blob/master/templates/TemplateComponent.h">TemplateComponent.h</a>, <a href="https://github.com/PsichiX/Ptakopysk/blob/master/templates/TemplateComponent.cpp">TemplateComponent.cpp</a>
 </li>
 </ul><hr><h3>
 <a name="examples" class="anchor" href="#examples"><span class="octicon octicon-link"></span></a>Examples:</h3>
