Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <ul>
 <li><strong>cd &lt;sdk&gt;/templates/</strong></li>
 <li><strong>./make_new_project.sh -o "path/to/project/directory/" -p "ProjectName"</strong></li>
+<li>Pro-tip: You may also want to change location of include and library files in Code::Blocks project.</li>
 </ul><p>Or use templates directly:</p>
 
 <ul>
