--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <ul>
 <li><a href="https://github.com/PsichiX/FloppyDisk">Floppy Disk</a></li>
 <li><a href="https://github.com/PsichiX/Ptakopysk/tree/master/examples/MathIsNotHeartless">Math isn't heartless</a></li>
+<li><a href="https://github.com/PsichiX/Ptakopysk/tree/master/examples/ProgressCircleShader">Progress ring shader</a></li>
 </ul><hr><h3>
 <a name="using-3rd-party-libraries" class="anchor" href="#using-3rd-party-libraries"><span class="octicon octicon-link"></span></a>Using 3rd-party libraries:</h3>
 
