--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
 <hr><h3>
 <a name="how-to" class="anchor" href="#how-to"><span class="octicon octicon-link"></span></a>How-to:</h3>
 
-<p>All you will want to do with this library in your project is just to use project generator script:</p>
+<p>All you will want to do with this library in your project is just use Zasuvka Ptakopyska IDE:</p>
+
+<ul>
+<li>Open IDE executable: <strong>&lt;sdk&gt;/IDE/ZasuvkaPtakopyska.exe</strong>
+</li>
+<li>In <strong>Settings</strong> page check if <strong>Code::Blocks</strong> and <strong>bash.exe</strong> paths are valid.</li>
+<li>
+<strong>Create</strong> new or <strong>open</strong> existing project.</li>
+<li>
+<strong>Edit</strong> code, <strong>build</strong> and <strong>run</strong>!</li>
+</ul><p>Or use project generator script:</p>
 
 <ul>
 <li><strong>cd &lt;sdk&gt;/templates/</strong></li>
