--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -35,6 +35,11 @@
 
 <h3>
 <a name="c-game-prototyping-framework-based-on-component-system" class="anchor" href="#c-game-prototyping-framework-based-on-component-system"><span class="octicon octicon-link"></span></a>C++ game prototyping framework based on component system</h3>
+
+<hr><h3>
+<a name="zasuvka-ptakopyska-ide" class="anchor" href="#zasuvka-ptakopyska-ide"><span class="octicon octicon-link"></span></a>Zasuvka Ptakopyska IDE</h3>
+
+<p><img src="https://raw.github.com/PsichiX/Ptakopysk/master/media/zasuvka-ptakopyska-screenshot.PNG" alt="ZasuvkaPtakopyska"></p>
 
 <hr><h3>
 <a name="how-to" class="anchor" href="#how-to"><span class="octicon octicon-link"></span></a>How-to:</h3>
