Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 <h3>
 <a name="c-game-prototyping-framework-based-on-component-system" class="anchor" href="#c-game-prototyping-framework-based-on-component-system"><span class="octicon octicon-link"></span></a>C++ game prototyping framework based on component system</h3>
 
+<p><strong><a href="https://github.com/PsichiX/Ptakopysk/releases">DOWNLOAD LATEST RELEASE</a></strong></p>
+
 <hr><h3>
 <a name="zasuvka-ptakopyska-ide" class="anchor" href="#zasuvka-ptakopyska-ide"><span class="octicon octicon-link"></span></a>Zasuvka Ptakopyska IDE</h3>
 
